--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,5 +40,6 @@ http = "0.2"
 hyper = { version = "0.14", default-features = false }
 linked_hash_set = "0.1"
 once_cell = "1.0"
+openssl-macros = "0.1.1"
 tower = "0.4"
 tower-layer = "0.3"
