--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,12 +37,12 @@ futures = "0.3"
 tokio = "1"
 anyhow = "1"
 antidote = "1.0.0"
-http = "1"
+http1 = { package = "http", version = "1" }
 http-body-util = "0.1.2"
-http_old = { package = "http", version = "0.2" }
-hyper = "1"
+http0 = { package = "http", version = "0.2" }
+hyper1 = { package = "hyper", version = "1" }
 hyper-util = "0.1.6"
-hyper_old = { package = "hyper", version = "0.14", default-features = false }
+hyper0 = { package = "hyper", version = "0.14", default-features = false }
 linked_hash_set = "0.1"
 once_cell = "1.0"
 openssl-macros = "0.1.1"
