--- a/hyper-boring/Cargo.toml
+++ b/hyper-boring/Cargo.toml
@@ -15,9 +15,13 @@ features = ["pq-experimental"]
 rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
-default = ["runtime"]
+default = ["runtime", "hyper1-runtime"]
 
-runtime = ["hyper_old/runtime", "dep:tower"]
+runtime = []
+# `hyper1` + `runtime`.
+hyper1-runtime = ["hyper1", "dep:tower"]
+# `hyper0` + `runtime`.
+hyper0-runtime = ["hyper0", "hyper0/runtime"]
 
 # Use a FIPS-validated version of boringssl.
 fips = ["tokio-boring/fips"]
@@ -28,16 +32,18 @@ fips-link-precompiled = ["tokio-boring/fips-link-precompiled"]
 # Enables experimental post-quantum crypto (https://blog.cloudflare.com/post-quantum-for-all/)
 pq-experimental = ["tokio-boring/pq-experimental"]
 
-# Enable Hyper 1 support
-hyper1 = ["dep:http", "dep:hyper", "dep:hyper-util", "dep:tower-service"]
+# Enable Hyper 1 support.
+hyper1 = ["dep:hyper1", "dep:http1", "dep:hyper-util", "dep:tower-service"]
+# Enable Hyper 0 support.
+hyper0 = ["dep:hyper0", "dep:http0"]
 
 [dependencies]
 antidote = { workspace = true }
-http = { workspace = true, optional = true }
-http_old = { workspace = true }
-hyper = { workspace = true, optional = true }
+http1 = { workspace = true, optional = true }
+http0 = { workspace = true, optional = true }
+hyper1 = { workspace = true, optional = true }
 hyper-util = { workspace = true, optional = true, features = ["client", "client-legacy"] }
-hyper_old = { workspace = true, features = ["client"] }
+hyper0 = { workspace = true, optional = true, features = ["client"] }
 linked_hash_set = { workspace = true }
 once_cell = { workspace = true }
 boring = { workspace = true }
@@ -51,8 +57,8 @@ tower-service = { workspace = true, optional = true }
 bytes = { workspace = true }
 http-body-util = { workspace = true }
 hyper-util = { workspace = true, features = ["http1", "http2", "service", "tokio"] }
-hyper = { workspace = true, features = ["server"] }
-hyper_old = { workspace = true, features = [ "full" ] }
+hyper1 = { workspace = true, features = ["server"] }
+hyper0 = { workspace = true, features = [ "full" ] }
 tokio = { workspace = true, features = [ "full" ] }
 tower = { workspace = true, features = ["util"] }
 futures = { workspace = true }
