--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ hyper_old = { package = "hyper", version = "0.14", default-features = false }
 linked_hash_set = "0.1"
 once_cell = "1.0"
 openssl-macros = "0.1.1"
-tower = "0.4"
+tower = { version = "0.4", default-features = false, features = ["util"] }
 tower-layer = "0.3"
 tower-service = "0.3"
 autocfg = "1.3.0"
