Remove "pq-experimental" and "underscore-wildcards" features
When set, these features cause boring-sys to apply patches to the source
before building BoringSSL. Instead, apply these patches unconditionally.
This matches the semantcis of pre-compiled BoringSSL, where the library
is expected to provide the features implemented by these patches.

We might want to do the same for "rpk", but currenlty our internal build
of boringSSL doesn't appear to supply the following APIs:

```
ffi::SSL_CTX_set_nullchain_and_key
ffi::SSL_CTX_set_server_raw_public_key_certificate
```

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Run clippy
         run: cargo clippy --all --all-targets
       - name: Check docs
-        run: cargo doc --no-deps -p boring -p boring-sys --features rpk,pq-experimental,underscore-wildcards
+        run: cargo doc --no-deps -p boring -p boring-sys --features rpk
         env:
           DOCS_RS: 1
   test:
@@ -357,15 +357,3 @@ jobs:
       shell: bash
     - run: cargo test --features rpk
       name: Run `rpk` tests
-    - run: cargo test --features pq-experimental
-      name: Run `pq-experimental` tests
-    - run: cargo test --features underscore-wildcards
-      name: Run `underscore-wildcards` tests
-    - run: cargo test --features pq-experimental,rpk
-      name: Run `pq-experimental,rpk` tests
-    - run: cargo test --features pq-experimental,underscore-wildcards
-      name: Run `pq-experimental,underscore-wildcards` tests
-    - run: cargo test --features rpk,underscore-wildcards
-      name: Run `rpk,underscore-wildcards` tests
-    - run: cargo test --features pq-experimental,rpk,underscore-wildcards
-      name: Run `pq-experimental,rpk,underscore-wildcards` tests
